# magicbook

./: .gitignore  README.html  README.md  pyproject.toml
config/: config.json  generic_ensemble.json  generic_ensemble.yaml  instruments.json
config/schema/: chart-info.json
magicbook/: __main__.py  book_tools.py  constants.py  imposition_tools  imposition_tools.py  library_tools.py  setup_tools.py  simple_io_tools.py  toc_tools.py
